--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ djangorestframework = "==3.11.0"
 psycopg2 = "==2.8.4"
 pytz = "==2019.3"
 sqlparse = "==0.3.1"
+gunicorn = "*"
 
 [requires]
 python_version = "3.8"
