--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ psycopg2 = "==2.8.4"
 pytz = "==2019.3"
 sqlparse = "==0.3.1"
 gunicorn = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.8"
