--- a/garbage_sorting/settings/.env.default
+++ b/garbage_sorting/settings/.env.default
@@ -1,4 +1,5 @@
 DEBUG=True
+DJANGO_LOG_LEVEL=DEBUG
 SECRET_KEY=development-secret-key
 ALLOWED_HOSTS=localhost
 DATABASE_URL=postgres://michael:@127.0.0.1:5432/garbage_sorting
